# trip-advisor-sample

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
crews/: flow.py
crews/crews/: __init__.py  city_details.py  trip_options.py  trip_planner.py
crews/prompts/: city_details.yaml  trip_options.yaml  trip_planner.yaml
sample_logs/Finland__Spring___2025-05-11/: city_details__16-47-29.json  trip_options__Finland__16-47-15.json  trip_planner__Finland__16-51-15.json
sample_logs/Finland__Spring___2025-05-11/city_details/: Finland_trip_plan.html  Helsinki_travel_guide.md  Turku_travel_guide.md  Åland_travel_guide.md
tools/: custom_file_writer.py  list_dir_files.py
utils/: custom_logger.py  event_listener.py  utils.py
